<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.fuelconsumption.FuelConsumptionFragmentHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.FuelManagementApp.NoActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"

                android:layout_height="?attr/actionBarSize"
                android:background="#F6F6FB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/fuel_cost_calculator"
                app:titleMarginStart="70dp"
                app:titleTextAppearance="@style/CustomToolbarTitleTextAppearance"
                app:titleTextColor="@color/DarkGreen" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageViewDrawerOpen"
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins"
        android:text="@string/input_your_travel_distance_vehicle_s_fuel_efficiency_nand_current_fuel_price_to_calculate_the_total_cost_and_nfuel_consumption_for_your_journey"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="508dp"
        android:hint="@string/distance_consumption"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/DarkGreen"
        app:boxStrokeWidth="1dp"
        app:endIconDrawable="@drawable/distance"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/EditTextTaskDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:maxLength="17"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="170dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="508dp"
        android:background="@drawable/spinner_background"
        android:dropDownWidth="match_parent"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="404dp"
        android:hint="@string/fuel_efficiency"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/DarkGreen"
        app:boxStrokeWidth="1dp"
        app:endIconDrawable="@drawable/speedometer"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/EditTextFuelEfficiency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:maxLength="17"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="170dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerFuelEfficiency"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="404dp"
        android:background="@drawable/spinner_background"
        android:dropDownWidth="match_parent"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1FuelPrice"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="296dp"
        android:hint="@string/fuel_price"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/DarkGreen"
        app:boxStrokeWidth="1dp"
        app:endIconDrawable="@drawable/fuel"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextFuelPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:maxLength="17"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="170dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerFuelPrice"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/spinner_background"
        android:dropDownWidth="match_parent"
        android:popupBackground="@color/white"
        android:popupElevation="2dp"
        android:popupTheme="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/materialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="220dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/round_trip_text_switch"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.materialswitch.MaterialSwitch>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/calculate_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialSwitch">

    </com.google.android.material.button.MaterialButton>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/DarkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialSwitch"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="96dp"
                android:src="@drawable/wallet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/default_price"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.214"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView21"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="36dp"
                android:src="@drawable/gas_station"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewFuelConsumed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/default_litre_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.185"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>