<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    tools:context=".NavigationDrawerMain"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.FuelManagementApp.NoActionBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="#F6F6FB"
                        app:title="@string/fuel_range_calculator"
                        app:titleMarginStart="70dp"
                        app:titleTextAppearance="@style/CustomToolbarTitleTextAppearance"
                        app:titleTextColor="@color/DarkGreen"/>
                </com.google.android.material.appbar.AppBarLayout>
                <ImageView
                    android:id="@+id/imageViewDrawerOpen"
                    android:layout_width="50dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins"
                android:text="@string/input_your_available_fuel_vehicle_s_fuel_efficiency_n_current_fuel_price_to_calculate_the_fuel_range_and_n_total_cost_of_your_journey"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="508dp"
                android:hint="@string/fuel"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/DarkGreen"
                app:boxStrokeWidth="1dp"
                app:endIconDrawable="@drawable/gas"
                app:endIconMode="custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextTaskFuel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="Zain"
                    android:inputType="text"
                    android:maxLength="17"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    tools:ignore="HardcodedText"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="170dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spinnerFuel"
                android:layout_width="175dp"
                android:layout_height="57dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="508dp"
                android:background="@drawable/spinner_background"
                android:dropDownWidth="match_parent"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout12"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="404dp"
                android:hint="@string/fuel_efficiency"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/DarkGreen"
                app:boxStrokeWidth="1dp"
                app:endIconDrawable="@drawable/speedometer"
                app:endIconMode="custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/EditTextTaskFuelEfficiency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="Zain"
                    android:inputType="text"
                    android:maxLength="17"
                    android:paddingStart="10dp"
                    tools:ignore="HardcodedText"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="170dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerFuelEfficiency"
                android:layout_width="175dp"
                android:layout_height="57dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="404dp"
                android:background="@drawable/spinner_background"
                android:dropDownWidth="match_parent"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1FuelPrice"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="296dp"
                android:hint="@string/fuel_price"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/DarkGreen"
                app:boxStrokeWidth="1dp"
                app:endIconDrawable="@drawable/fuel"
                app:endIconMode="custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/EditTextTaskFuelPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="17"
                    android:paddingStart="10dp"
                    tools:ignore="HardcodedText"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="170dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerFuelPrice"
                android:layout_width="175dp"
                android:layout_height="57dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="296dp"
                android:background="@drawable/spinner_background"
                android:dropDownWidth="match_parent"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/calculate_button_text"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="parent">
            </com.google.android.material.button.MaterialButton>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardBackgroundColor="@color/DarkGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="96dp"
                        android:src="@drawable/wallet"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                    <TextView
                        android:id="@+id/textViewFuelCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/default_price"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.193"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView21"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="36dp"
                        android:src="@drawable/turn_rightwhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/textViewFuelRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/default_litre_text"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.182"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.699" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F6F6FB"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation_drawer"
        app:itemIconPadding="15dp"
        app:itemIconSize="27dp"
        app:itemRippleColor="#43106681"
        app:itemShapeFillColor="#A3E3E7E8"
        app:itemShapeInsetBottom="10dp"
        app:itemTextAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:itemVerticalPadding="20dp"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>